tests/tests/failing_examples/not_fn.stderr
error: custom attribute panicked
 --> $DIR/not_fn.rs:3:1
  |
3 | #[hoist_temporaries(snack)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse function: Error("expected `fn`")
